# J1-NOC-Platform

./: .commitlintrc.json  .dockerignore  .editorconfig  .env  .env.example  .env.example.sanitized  .env.publish-safe  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  FIXES.md  INTENT.md  README.md  REMOTE_VERIFY.txt  TESTING.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.bak  j1.yaml  nginx.conf  pyproject.toml  ruff.toml  setup.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  secret-scan.yml
admin-service/: Dockerfile  README.md  main.py
agent/windows_agent/: build.ps1  config.json.example  install-service.ps1  j1noc-agent.spec  main.py  requirements.txt  version_info.txt
alembic/: env.py
alembic/versions/: 815042be5ea2_initial_schema.py
backend/: .env.example  Dockerfile  __init__.py  healthcheck.py  main.py  noc_local.db  requirements.txt
backend/app/: __init__.py  config.py  database.py  encryption.py  logging_config.py  main.py  models.py  scheduler.py  schemas.py
backend/routers/: __init__.py  agent.py  ai.py  auth.py  dashboard.py  notifications.py  tools.py
backend/tests/: test_auth.py  test_dashboard.py
database/: schema.sql
docker/: docker-compose.yml
docs/: LIVE_DEPLOYMENT.md  PROJECT_ROADMAP.md  deployment-plan.md  deployment-report.md  telegraf-windows.conf
frontend/: Dockerfile  README.md  admin.html  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vanilla.html
frontend/src/: App.tsx
monitoring/: chrony-exporter.sh
monitoring/loki/: local-config.yaml  loki-config.yml
monitoring/snmp-exporter/: snmp.yml
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: capture-screenshots.py  deploy.sh  install.sh  sample_seed.sh  verify_collector_secrets.py
systemd/: j1-noc-platform.service
(+43 files in other folders)
