[project]
name = "j1-noc-platform-backend"
version = "11.0.0"
description = "J1 NOC Platform backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "cryptography==44.0.3",
    "fastapi==0.139.0",
    "uvicorn[standard]==0.49.0",
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    "psycopg2-binary==2.9.9",
    "redis==5.0.8",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "prometheus-client==0.25.0",
    "httpx==0.28.1",
    "requests==2.34.2",
    "email-validator==2.2.0",
    "python-multipart==0.0.32",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "backend/app"]
exclude = ["node_modules", "dist", ".venv", "venv", "__pycache__", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "W", "DJ", "ASYNC"]
ignore = ["E501", "B008", "B905", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"backend/tests/*" = ["B", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["backend/tests/", ".venv/", "venv/"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=60"
asyncio_mode = "auto"
